SonarValidator_Prober/components/parser/generated/grammar/FrrRouterParser.cpp

// Generated from /home/osboxes/IdeaProjects/SonarValidator/SonarValidator_Prober/components/parser/grammar/FrrRouter.g4 by ANTLR 4.13.2


#include "FrrRouterVisitor.h"

#include "FrrRouterParser.h"


using namespace antlrcpp;

using namespace antlr4;

namespace {

struct FrrRouterParserStaticData final {
  FrrRouterParserStaticData(std::vector<std::string> ruleNames,
                        std::vector<std::string> literalNames,
                        std::vector<std::string> symbolicNames)
      : ruleNames(std::move(ruleNames)), literalNames(std::move(literalNames)),
        symbolicNames(std::move(symbolicNames)),
        vocabulary(this->literalNames, this->symbolicNames) {}

  FrrRouterParserStaticData(const FrrRouterParserStaticData&) = delete;
  FrrRouterParserStaticData(FrrRouterParserStaticData&&) = delete;
  FrrRouterParserStaticData& operator=(const FrrRouterParserStaticData&) = delete;
  FrrRouterParserStaticData& operator=(FrrRouterParserStaticData&&) = delete;

  std::vector<antlr4::dfa::DFA> decisionToDFA;
  antlr4::atn::PredictionContextCache sharedContextCache;
  const std::vector<std::string> ruleNames;
  const std::vector<std::string> literalNames;
  const std::vector<std::string> symbolicNames;
  const antlr4::dfa::Vocabulary vocabulary;
  antlr4::atn::SerializedATNView serializedATN;
  std::unique_ptr<antlr4::atn::ATN> atn;
};

::antlr4::internal::OnceFlag frrrouterParserOnceFlag;
#if ANTLR4_USE_THREAD_LOCAL_CACHE
static thread_local
#endif
std::unique_ptr<FrrRouterParserStaticData> frrrouterParserStaticData = nullptr;

void frrrouterParserInitialize() {
#if ANTLR4_USE_THREAD_LOCAL_CACHE
  if (frrrouterParserStaticData != nullptr) {
    return;
  }
#else
  assert(frrrouterParserStaticData == nullptr);
#endif
  auto staticData = std::make_unique<FrrRouterParserStaticData>(
    std::vector<std::string>{
      "routeDocument", "ifaceDocument", "detailDocument", "routeItem", "routeLine", 
      "routeCode", "destination", "subnetSummary", "ifaceItem", "briefHeader", 
      "briefEntry", "addrOrUnassigned", "briefField", "detailItem", "ifaceHeader", 
      "detailAttr", "ifname", "genericLine", "blank", "elem"
    },
    std::vector<std::string>{
      "", "", "", "", "'default'", "", "'Codes:'", "'Gateway'", "'is'", 
      "'variably'", "'subnetted'", "", "'unassigned'", "", "", "", "", "", 
      "", "':'", "'/'"
    },
    std::vector<std::string>{
      "", "NEWLINE", "WS", "ROUTECODE", "DEFAULT", "ADDR", "CODES", "GATEWAY", 
      "IS", "VARIABLY", "SUBMITTED", "INTERFACE", "UNASSIGNED", "METHOD", 
      "STATUSWORD", "IFNAME", "PORTNAME", "IDENT", "ATTRWORD", "COLON", 
      "SLASH", "WORD"
    }
  );
  staticData->serializedATN = antlr4::atn::SerializedATNView(serializedATNSegment, sizeof(serializedATNSegment) / sizeof(serializedATNSegment[0]));

  antlr4::atn::ATNDeserializer deserializer;
  staticData->atn = deserializer.deserialize(staticData->serializedATN);

  const size_t count = staticData->atn->getNumberOfDecisions();
  staticData->decisionToDFA.reserve(count);
  for (size_t i = 0; i < count; i++) { 
    staticData->decisionToDFA.emplace_back(staticData->atn->getDecisionState(i), i);
  }
  frrrouterParserStaticData = std::move(staticData);
}

}

FrrRouterParser::FrrRouterParser(TokenStream *input) : FrrRouterParser(input, antlr4::atn::ParserATNSimulatorOptions()) {}

FrrRouterParser::FrrRouterParser(TokenStream *input, const antlr4::atn::ParserATNSimulatorOptions &options) : Parser(input) {
  FrrRouterParser::initialize();
  _interpreter = new atn::ParserATNSimulator(this, *frrrouterParserStaticData->atn, frrrouterParserStaticData->decisionToDFA, frrrouterParserStaticData->sharedContextCache, options);
}

FrrRouterParser::~FrrRouterParser() {
  delete _interpreter;
}

const atn::ATN& FrrRouterParser::getATN() const {
  return *frrrouterParserStaticData->atn;
}

std::string FrrRouterParser::getGrammarFileName() const {
  return "FrrRouter.g4";
}

const std::vector<std::string>& FrrRouterParser::getRuleNames() const {
  return frrrouterParserStaticData->ruleNames;
}

const dfa::Vocabulary& FrrRouterParser::getVocabulary() const {
  return frrrouterParserStaticData->vocabulary;
}

antlr4::atn::SerializedATNView FrrRouterParser::getSerializedATN() const {
  return frrrouterParserStaticData->serializedATN;
}


//----------------- RouteDocumentContext ------------------------------------------------------------------

FrrRouterParser::RouteDocumentContext::RouteDocumentContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* FrrRouterParser::RouteDocumentContext::EOF() {
  return getToken(FrrRouterParser::EOF, 0);
}

std::vector<FrrRouterParser::RouteItemContext *> FrrRouterParser::RouteDocumentContext::routeItem() {
  return getRuleContexts<FrrRouterParser::RouteItemContext>();
}

FrrRouterParser::RouteItemContext* FrrRouterParser::RouteDocumentContext::routeItem(size_t i) {
  return getRuleContext<FrrRouterParser::RouteItemContext>(i);
}


size_t FrrRouterParser::RouteDocumentContext::getRuleIndex() const {
  return FrrRouterParser::RuleRouteDocument;
}


std::any FrrRouterParser::RouteDocumentContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<FrrRouterVisitor*>(visitor))
    return parserVisitor->visitRouteDocument(this);
  else
    return visitor->visitChildren(this);
}

FrrRouterParser::RouteDocumentContext* FrrRouterParser::routeDocument() {
  RouteDocumentContext *_localctx = _tracker.createInstance<RouteDocumentContext>(_ctx, getState());
  enterRule(_localctx, 0, FrrRouterParser::RuleRouteDocument);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(43);
    _errHandler->sync(this);
    _la = _input->LA(1);
    while ((((_la & ~ 0x3fULL) == 0) &&
      ((1ULL << _la) & 4194302) != 0)) {
      setState(40);
      routeItem();
      setState(45);
      _errHandler->sync(this);
      _la = _input->LA(1);
    }
    setState(46);
    match(FrrRouterParser::EOF);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- IfaceDocumentContext ------------------------------------------------------------------

FrrRouterParser::IfaceDocumentContext::IfaceDocumentContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* FrrRouterParser::IfaceDocumentContext::EOF() {
  return getToken(FrrRouterParser::EOF, 0);
}

std::vector<FrrRouterParser::IfaceItemContext *> FrrRouterParser::IfaceDocumentContext::ifaceItem() {
  return getRuleContexts<FrrRouterParser::IfaceItemContext>();
}

FrrRouterParser::IfaceItemContext* FrrRouterParser::IfaceDocumentContext::ifaceItem(size_t i) {
  return getRuleContext<FrrRouterParser::IfaceItemContext>(i);
}


size_t FrrRouterParser::IfaceDocumentContext::getRuleIndex() const {
  return FrrRouterParser::RuleIfaceDocument;
}


std::any FrrRouterParser::IfaceDocumentContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<FrrRouterVisitor*>(visitor))
    return parserVisitor->visitIfaceDocument(this);
  else
    return visitor->visitChildren(this);
}

FrrRouterParser::IfaceDocumentContext* FrrRouterParser::ifaceDocument() {
  IfaceDocumentContext *_localctx = _tracker.createInstance<IfaceDocumentContext>(_ctx, getState());
  enterRule(_localctx, 2, FrrRouterParser::RuleIfaceDocument);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(51);
    _errHandler->sync(this);
    _la = _input->LA(1);
    while ((((_la & ~ 0x3fULL) == 0) &&
      ((1ULL << _la) & 4194302) != 0)) {
      setState(48);
      ifaceItem();
      setState(53);
      _errHandler->sync(this);
      _la = _input->LA(1);
    }
    setState(54);
    match(FrrRouterParser::EOF);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- DetailDocumentContext ------------------------------------------------------------------

FrrRouterParser::DetailDocumentContext::DetailDocumentContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* FrrRouterParser::DetailDocumentContext::EOF() {
  return getToken(FrrRouterParser::EOF, 0);
}

std::vector<FrrRouterParser::DetailItemContext *> FrrRouterParser::DetailDocumentContext::detailItem() {
  return getRuleContexts<FrrRouterParser::DetailItemContext>();
}

FrrRouterParser::DetailItemContext* FrrRouterParser::DetailDocumentContext::detailItem(size_t i) {
  return getRuleContext<FrrRouterParser::DetailItemContext>(i);
}


size_t FrrRouterParser::DetailDocumentContext::getRuleIndex() const {
  return FrrRouterParser::RuleDetailDocument;
}


std::any FrrRouterParser::DetailDocumentContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<FrrRouterVisitor*>(visitor))
    return parserVisitor->visitDetailDocument(this);
  else
    return visitor->visitChildren(this);
}

FrrRouterParser::DetailDocumentContext* FrrRouterParser::detailDocument() {
  DetailDocumentContext *_localctx = _tracker.createInstance<DetailDocumentContext>(_ctx, getState());
  enterRule(_localctx, 4, FrrRouterParser::RuleDetailDocument);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(59);
    _errHandler->sync(this);
    _la = _input->LA(1);
    while ((((_la & ~ 0x3fULL) == 0) &&
      ((1ULL << _la) & 4194302) != 0)) {
      setState(56);
      detailItem();
      setState(61);
      _errHandler->sync(this);
      _la = _input->LA(1);
    }
    setState(62);
    match(FrrRouterParser::EOF);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- RouteItemContext ------------------------------------------------------------------

FrrRouterParser::RouteItemContext::RouteItemContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

FrrRouterParser::RouteLineContext* FrrRouterParser::RouteItemContext::routeLine() {
  return getRuleContext<FrrRouterParser::RouteLineContext>(0);
}

FrrRouterParser::SubnetSummaryContext* FrrRouterParser::RouteItemContext::subnetSummary() {
  return getRuleContext<FrrRouterParser::SubnetSummaryContext>(0);
}

FrrRouterParser::GenericLineContext* FrrRouterParser::RouteItemContext::genericLine() {
  return getRuleContext<FrrRouterParser::GenericLineContext>(0);
}

FrrRouterParser::BlankContext* FrrRouterParser::RouteItemContext::blank() {
  return getRuleContext<FrrRouterParser::BlankContext>(0);
}


size_t FrrRouterParser::RouteItemContext::getRuleIndex() const {
  return FrrRouterParser::RuleRouteItem;
}


std::any FrrRouterParser::RouteItemContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<FrrRouterVisitor*>(visitor))
    return parserVisitor->visitRouteItem(this);
  else
    return visitor->visitChildren(this);
}

FrrRouterParser::RouteItemContext* FrrRouterParser::routeItem() {
  RouteItemContext *_localctx = _tracker.createInstance<RouteItemContext>(_ctx, getState());
  enterRule(_localctx, 6, FrrRouterParser::RuleRouteItem);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    setState(68);
    _errHandler->sync(this);
    switch (getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 3, _ctx)) {
    case 1: {
      enterOuterAlt(_localctx, 1);
      setState(64);
      routeLine();
      break;
    }

    case 2: {
      enterOuterAlt(_localctx, 2);
      setState(65);
      subnetSummary();
      break;
    }

    case 3: {
      enterOuterAlt(_localctx, 3);
      setState(66);
      genericLine();
      break;
    }

    case 4: {
      enterOuterAlt(_localctx, 4);
      setState(67);
      blank();
      break;
    }

    default:
      break;
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- RouteLineContext ------------------------------------------------------------------

FrrRouterParser::RouteLineContext::RouteLineContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

FrrRouterParser::DestinationContext* FrrRouterParser::RouteLineContext::destination() {
  return getRuleContext<FrrRouterParser::DestinationContext>(0);
}

tree::TerminalNode* FrrRouterParser::RouteLineContext::NEWLINE() {
  return getToken(FrrRouterParser::NEWLINE, 0);
}

std::vector<FrrRouterParser::RouteCodeContext *> FrrRouterParser::RouteLineContext::routeCode() {
  return getRuleContexts<FrrRouterParser::RouteCodeContext>();
}

FrrRouterParser::RouteCodeContext* FrrRouterParser::RouteLineContext::routeCode(size_t i) {
  return getRuleContext<FrrRouterParser::RouteCodeContext>(i);
}

std::vector<FrrRouterParser::ElemContext *> FrrRouterParser::RouteLineContext::elem() {
  return getRuleContexts<FrrRouterParser::ElemContext>();
}

FrrRouterParser::ElemContext* FrrRouterParser::RouteLineContext::elem(size_t i) {
  return getRuleContext<FrrRouterParser::ElemContext>(i);
}


size_t FrrRouterParser::RouteLineContext::getRuleIndex() const {
  return FrrRouterParser::RuleRouteLine;
}


std::any FrrRouterParser::RouteLineContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<FrrRouterVisitor*>(visitor))
    return parserVisitor->visitRouteLine(this);
  else
    return visitor->visitChildren(this);
}

FrrRouterParser::RouteLineContext* FrrRouterParser::routeLine() {
  RouteLineContext *_localctx = _tracker.createInstance<RouteLineContext>(_ctx, getState());
  enterRule(_localctx, 8, FrrRouterParser::RuleRouteLine);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(71); 
    _errHandler->sync(this);
    _la = _input->LA(1);
    do {
      setState(70);
      routeCode();
      setState(73); 
      _errHandler->sync(this);
      _la = _input->LA(1);
    } while (_la == FrrRouterParser::ROUTECODE);
    setState(75);
    destination();
    setState(79);
    _errHandler->sync(this);
    _la = _input->LA(1);
    while ((((_la & ~ 0x3fULL) == 0) &&
      ((1ULL << _la) & 4194300) != 0)) {
      setState(76);
      elem();
      setState(81);
      _errHandler->sync(this);
      _la = _input->LA(1);
    }
    setState(82);
    match(FrrRouterParser::NEWLINE);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- RouteCodeContext ------------------------------------------------------------------

FrrRouterParser::RouteCodeContext::RouteCodeContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* FrrRouterParser::RouteCodeContext::ROUTECODE() {
  return getToken(FrrRouterParser::ROUTECODE, 0);
}


size_t FrrRouterParser::RouteCodeContext::getRuleIndex() const {
  return FrrRouterParser::RuleRouteCode;
}


std::any FrrRouterParser::RouteCodeContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<FrrRouterVisitor*>(visitor))
    return parserVisitor->visitRouteCode(this);
  else
    return visitor->visitChildren(this);
}

FrrRouterParser::RouteCodeContext* FrrRouterParser::routeCode() {
  RouteCodeContext *_localctx = _tracker.createInstance<RouteCodeContext>(_ctx, getState());
  enterRule(_localctx, 10, FrrRouterParser::RuleRouteCode);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(84);
    match(FrrRouterParser::ROUTECODE);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- DestinationContext ------------------------------------------------------------------

FrrRouterParser::DestinationContext::DestinationContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* FrrRouterParser::DestinationContext::DEFAULT() {
  return getToken(FrrRouterParser::DEFAULT, 0);
}

tree::TerminalNode* FrrRouterParser::DestinationContext::ADDR() {
  return getToken(FrrRouterParser::ADDR, 0);
}


size_t FrrRouterParser::DestinationContext::getRuleIndex() const {
  return FrrRouterParser::RuleDestination;
}


std::any FrrRouterParser::DestinationContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<FrrRouterVisitor*>(visitor))
    return parserVisitor->visitDestination(this);
  else
    return visitor->visitChildren(this);
}

FrrRouterParser::DestinationContext* FrrRouterParser::destination() {
  DestinationContext *_localctx = _tracker.createInstance<DestinationContext>(_ctx, getState());
  enterRule(_localctx, 12, FrrRouterParser::RuleDestination);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(86);
    _la = _input->LA(1);
    if (!(_la == FrrRouterParser::DEFAULT

    || _la == FrrRouterParser::ADDR)) {
    _errHandler->recoverInline(this);
    }
    else {
      _errHandler->reportMatch(this);
      consume();
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- SubnetSummaryContext ------------------------------------------------------------------

FrrRouterParser::SubnetSummaryContext::SubnetSummaryContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* FrrRouterParser::SubnetSummaryContext::ADDR() {
  return getToken(FrrRouterParser::ADDR, 0);
}

tree::TerminalNode* FrrRouterParser::SubnetSummaryContext::IS() {
  return getToken(FrrRouterParser::IS, 0);
}

tree::TerminalNode* FrrRouterParser::SubnetSummaryContext::VARIABLY() {
  return getToken(FrrRouterParser::VARIABLY, 0);
}

tree::TerminalNode* FrrRouterParser::SubnetSummaryContext::SUBMITTED() {
  return getToken(FrrRouterParser::SUBMITTED, 0);
}

tree::TerminalNode* FrrRouterParser::SubnetSummaryContext::NEWLINE() {
  return getToken(FrrRouterParser::NEWLINE, 0);
}

std::vector<FrrRouterParser::ElemContext *> FrrRouterParser::SubnetSummaryContext::elem() {
  return getRuleContexts<FrrRouterParser::ElemContext>();
}

FrrRouterParser::ElemContext* FrrRouterParser::SubnetSummaryContext::elem(size_t i) {
  return getRuleContext<FrrRouterParser::ElemContext>(i);
}


size_t FrrRouterParser::SubnetSummaryContext::getRuleIndex() const {
  return FrrRouterParser::RuleSubnetSummary;
}


std::any FrrRouterParser::SubnetSummaryContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<FrrRouterVisitor*>(visitor))
    return parserVisitor->visitSubnetSummary(this);
  else
    return visitor->visitChildren(this);
}

FrrRouterParser::SubnetSummaryContext* FrrRouterParser::subnetSummary() {
  SubnetSummaryContext *_localctx = _tracker.createInstance<SubnetSummaryContext>(_ctx, getState());
  enterRule(_localctx, 14, FrrRouterParser::RuleSubnetSummary);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(88);
    match(FrrRouterParser::ADDR);
    setState(89);
    match(FrrRouterParser::IS);
    setState(90);
    match(FrrRouterParser::VARIABLY);
    setState(91);
    match(FrrRouterParser::SUBMITTED);
    setState(95);
    _errHandler->sync(this);
    _la = _input->LA(1);
    while ((((_la & ~ 0x3fULL) == 0) &&
      ((1ULL << _la) & 4194300) != 0)) {
      setState(92);
      elem();
      setState(97);
      _errHandler->sync(this);
      _la = _input->LA(1);
    }
    setState(98);
    match(FrrRouterParser::NEWLINE);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- IfaceItemContext ------------------------------------------------------------------

FrrRouterParser::IfaceItemContext::IfaceItemContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

FrrRouterParser::BriefHeaderContext* FrrRouterParser::IfaceItemContext::briefHeader() {
  return getRuleContext<FrrRouterParser::BriefHeaderContext>(0);
}

FrrRouterParser::BriefEntryContext* FrrRouterParser::IfaceItemContext::briefEntry() {
  return getRuleContext<FrrRouterParser::BriefEntryContext>(0);
}

FrrRouterParser::GenericLineContext* FrrRouterParser::IfaceItemContext::genericLine() {
  return getRuleContext<FrrRouterParser::GenericLineContext>(0);
}

FrrRouterParser::BlankContext* FrrRouterParser::IfaceItemContext::blank() {
  return getRuleContext<FrrRouterParser::BlankContext>(0);
}


size_t FrrRouterParser::IfaceItemContext::getRuleIndex() const {
  return FrrRouterParser::RuleIfaceItem;
}


std::any FrrRouterParser::IfaceItemContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<FrrRouterVisitor*>(visitor))
    return parserVisitor->visitIfaceItem(this);
  else
    return visitor->visitChildren(this);
}

FrrRouterParser::IfaceItemContext* FrrRouterParser::ifaceItem() {
  IfaceItemContext *_localctx = _tracker.createInstance<IfaceItemContext>(_ctx, getState());
  enterRule(_localctx, 16, FrrRouterParser::RuleIfaceItem);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    setState(104);
    _errHandler->sync(this);
    switch (getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 7, _ctx)) {
    case 1: {
      enterOuterAlt(_localctx, 1);
      setState(100);
      briefHeader();
      break;
    }

    case 2: {
      enterOuterAlt(_localctx, 2);
      setState(101);
      briefEntry();
      break;
    }

    case 3: {
      enterOuterAlt(_localctx, 3);
      setState(102);
      genericLine();
      break;
    }

    case 4: {
      enterOuterAlt(_localctx, 4);
      setState(103);
      blank();
      break;
    }

    default:
      break;
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- BriefHeaderContext ------------------------------------------------------------------

FrrRouterParser::BriefHeaderContext::BriefHeaderContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* FrrRouterParser::BriefHeaderContext::INTERFACE() {
  return getToken(FrrRouterParser::INTERFACE, 0);
}

tree::TerminalNode* FrrRouterParser::BriefHeaderContext::NEWLINE() {
  return getToken(FrrRouterParser::NEWLINE, 0);
}

std::vector<FrrRouterParser::ElemContext *> FrrRouterParser::BriefHeaderContext::elem() {
  return getRuleContexts<FrrRouterParser::ElemContext>();
}

FrrRouterParser::ElemContext* FrrRouterParser::BriefHeaderContext::elem(size_t i) {
  return getRuleContext<FrrRouterParser::ElemContext>(i);
}


size_t FrrRouterParser::BriefHeaderContext::getRuleIndex() const {
  return FrrRouterParser::RuleBriefHeader;
}


std::any FrrRouterParser::BriefHeaderContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<FrrRouterVisitor*>(visitor))
    return parserVisitor->visitBriefHeader(this);
  else
    return visitor->visitChildren(this);
}

FrrRouterParser::BriefHeaderContext* FrrRouterParser::briefHeader() {
  BriefHeaderContext *_localctx = _tracker.createInstance<BriefHeaderContext>(_ctx, getState());
  enterRule(_localctx, 18, FrrRouterParser::RuleBriefHeader);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(106);
    match(FrrRouterParser::INTERFACE);
    setState(110);
    _errHandler->sync(this);
    _la = _input->LA(1);
    while ((((_la & ~ 0x3fULL) == 0) &&
      ((1ULL << _la) & 4194300) != 0)) {
      setState(107);
      elem();
      setState(112);
      _errHandler->sync(this);
      _la = _input->LA(1);
    }
    setState(113);
    match(FrrRouterParser::NEWLINE);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }
